[FIX]Adjust scrollbar on second ul list of sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@
     font-weight: 500;
     text-align: center;
 }
+.name-playlist{
+    height: 35vh;
+    overflow-y: auto;
+}
 .name-playlist ul{
     list-style-type: none;
 }
